feat: complete task whith modal

--- a/Lesson9/index.html
+++ b/Lesson9/index.html
@@ -40,7 +40,7 @@
                     </label>
                     <div class="popap-btn">
                         <button class="btn close" onclick="hide()">close</button>
-                        <button class="btn ok" type="submit">ok</button>
+                        <button class="btn ok" type="button">ok</button>
                     </div>
                 </form>
 
